--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,23 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["bom1"]
+  "regions": ["bom1"],
+  "rewrites": [
+    {
+      "source": "/url-shortner",
+      "destination": "https://url-shortner-woad-tau.vercel.app/url-shortner"
+    },
+    {
+      "source": "/url-shortner/:path*",
+      "destination": "https://url-shortner-woad-tau.vercel.app/url-shortner/:path*"
+    },
+    {
+      "source": "/api/shorten",
+      "destination": "https://url-shortner-woad-tau.vercel.app/api/shorten"
+    },
+    {
+      "source": "/:shortCode(\\w{6})",
+      "destination": "https://url-shortner-woad-tau.vercel.app/:shortCode"
+    }
+  ]
 }
