--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.22",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.9",
     "nodemailer": "^7.0.6",
+    "openai": "^6.22.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
